RESOLVED FIXED293974
AX: Voice control not focusing inputs and textareas when not in a fieldset
https://bugs.webkit.org/show_bug.cgi?id=293974
Summary AX: Voice control not focusing inputs and textareas when not in a fieldset
hidanielle.dev
Reported 2025-06-03 11:50:19 PDT
I do not know if this was always present but I've been investigating an issue entering text in inputs and textareas using voice control in Safari specifically - this issue is not present in Chrome OS: Sequoia 15.5 Browser: Safari 18.5 You can recreate this in any form, for example see the fields from W3C https://www.w3.org/WAI/tutorials/forms/labels/ Attempting to access the field by it's name will alert as if it's found the field, but does not enter the field Showing numbers displays a number on the field itself (not the label as well) but selecting that number does nothing You can only actually get focus into the field by using show grid Interestingly, if the field is wrapped in a fieldset, attempting to access the field by it's name will show numbers next to the fields label AND input. If you select the labels number, you successfully focus the input, but if you select the inputs name, nothing happens again. You can see this in that same form documentation but the page about grouped controls, https://www.w3.org/WAI/tutorials/forms/grouping/ I think this is a pretty big issue. Input fields are not required to be in fieldsets and so this would be a pretty common issue that requires a lot of work for a user to actually be able to fill out and likely get understandably frustrated. It's also not obvious to developers why the issue would exist, despite a workaround being to wrap everything in a fieldset (which still doesn't actually work exactly how it should but would get the job done slightly more easily than using the grid on the users part)
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-03 11:50:28 PDT
Joshua Hoffman
Comment 2 2025-06-26 22:11:39 PDT
EWS
Comment 3 2025-06-27 18:24:24 PDT
Committed 296763@main (09204fce5fa1): <https://commits.webkit.org/296763@main> Reviewed commits have been landed. Closing PR #47282 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.