AX: Voice control not focusing inputs and textareas when not in a fieldset https://bugs.webkit.org/show_bug.cgi?id=293974 rdar://152517222

Reviewed by Tyler Wilcock.

We expose text inputs as supporting press actions in supportsPressAction, but did
not handle them at all when computing a node's action element. This would lead ATs
like Voice Control to try to invoke this action, with no result or change in focus.

To start supporting this, return text inputs and content editable nodes as action
elements.

* LayoutTests/accessibility/mac/press-action-text-inputs-expected.txt: Added.
* LayoutTests/accessibility/mac/press-action-text-inputs.html: Added.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::nodeActionElement):

Canonical link: https://commits.webkit.org/296763@main